src/components/ExperiencesSection/experiencesSection.module.scss
.experiencesSection {
  position: relative;
  background: #23332E linear-gradient(-75deg, #3BF94E00 0%, #01000140 100%) 0 0 no-repeat padding-box;
  padding-top: 80px;
}

.title {
  text-align: center;
  margin: 0 0 40px;
  @media (min-width: 768px) {
    text-align: right;
    margin: 80px 0 120px;
  }
}

.list {
  flex-direction: column;
  align-items: start;
  gap: 24px;
  margin-bottom: 40px;
  @media (min-width: 992px) {
    margin-bottom: 0;
  }
}

.listItem {
  gap: 16px;
  h5 {
    font-family: "Orbitron", serif;
    font-size: 48px;
    color: #34DB21;
  }
  svg {
    width: 80px;
    height: 80px;
  }
  span {
    font-size: 26px;
    font-weight: 700;
  }
}

.whiteLineDivider {
  display: none;
  @media (min-width: 768px) {
    display: block;
    position: static;
    margin: 0 40px 0 20%;
  }
}

.topDivider {
  display: none;
  margin-right: 60px;
  margin-bottom: 8px;
  @media (min-width: 768px) {
    display: flex;
  }
}

.bottomDivider {
  width: 100%;
}

